small changes in notebook + readme

--- a/notebooks/arxiv_retrieve.ipynb
+++ b/notebooks/arxiv_retrieve.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "3d4c8b2d-ac5b-499e-bcfe-ebbfba4b2dc9",
    "metadata": {
     "scrolled": true
@@ -480,7 +480,7 @@
     "        self.search_results = search_results\n",
     "        \n",
     "        self.summary_focus_summ = '''\n",
-    "            potential immediate enterprise and product uses, as well as the claimed benefits of the original innovations.\n",
+    "            potential immediate enterprise use cases, as well as the claimed benefits of the original innovations.\n",
     "            '''\n",
     "        prompt_template_summ = \"\"\"\n",
     "            Write a very short (around 50 words) summary\n",
@@ -489,7 +489,7 @@
     "        \n",
     "        prompt_template_intro = '''\n",
     "            Write a short and engaging title (around 30 words) and introduction \n",
-    "            (around 200 words) for a document that presents recent machine learning research news. \n",
+    "            (around 200 words) for a document that presents recent machine learning research news.\n",
     "            Focus the intro on potential breakthroughs from the presented research. \n",
     "            \n",
     "            Here is the text to use as reference:\n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "f59d12a6-2be7-40d4-b093-0275759e6cdf",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 10/10 [00:32<00:00,  3.24s/it]\n"
+      "100%|███████████████████████████████████████████| 10/10 [00:36<00:00,  3.67s/it]\n"
      ]
     }
    ],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "c0b93111-b840-4970-a123-ea4e64b62a5a",
    "metadata": {},
    "outputs": [
@@ -586,34 +586,34 @@
        "\n",
        "<h1>Unlocking the Potential of Machine Learning Research: Recent Breakthroughs</h1>\n",
        "\n",
-       "<p>Recent advances in machine learning research have opened up a world of possibilities for enterprises and products. From accelerating LLM inference to improving AI systems' emotional reasoning, the potential of machine learning research is vast. In this document, we present some of the most recent breakthroughs in machine learning research and discuss how they can be used to benefit enterprises and products.</p>\n",
+       "<p>The potential of machine learning research is vast and ever-growing. Recent breakthroughs in the field have enabled faster and more efficient inference for enterprise use cases such as natural language processing and machine translation. New benchmarks have been proposed to accurately assess the performance of chatbots, and frameworks have been developed to accelerate the benchmarking of large language models (LLMs) for NLP tasks. Transferring reasoning capabilities from large language models to smaller models has been made possible, and new methods have been proposed to enhance AI systems' emotional reasoning with commonsense knowledge. Open-source LLMs have been compared to GPT-4 and Claude 2 on multiple-choice questions in Nephrology, and a unified and customized instruction-following language model has been proposed for e-commerce authoring tasks. Finally, a language model specifically designed to critique and refine language model outputs has been developed, and the use of ChatGPT for code generation has been evaluated. </p>\n",
        "\n",
-       "<p>Staged speculative decoding is a novel algorithm that reduces single-batch decoding latency by 3.16x while perfectly preserving output quality. This enables faster and more efficient LLM inference for enterprise and product applications. The E2E benchmark is a novel benchmark that uses cosine similarity to measure the performance of chatbots powered by Large Language Models (LLMs). Enterprises and products can use this benchmark to accurately assess the performance of their chatbots. LLMeBench is a flexible framework for accelerating the benchmarking of Large Language Models (LLMs). It can be easily customized for any NLP task and language, and features zero- and few-shot learning settings. Enterprises and products can use the framework to quickly evaluate the performance of LLMs on their own datasets.</<div><h4><a href=http://arxiv.org/abs/2308.04623v1>Accelerating LLM Inference with Staged Speculative Decoding (2308.04623v1)</a> </h4><div><p>\n",
-       "This paper proposes a novel algorithm, staged speculative decoding, to accelerate LLM inference in small-batch, on-device scenarios. It reduces single-batch decoding latency by 3.16x while perfectly preserving output quality, enabling faster and more efficient LLM inference for enterprise and product applications.</p>\n",
+       "<p>These recent breakthroughs in machine learning research have the potential to revolutionize the way enterprises use AI. Faster and more efficient inference can enable faster and more accurate natural<div><h4><a href=http://arxiv.org/abs/2308.04623v1>Accelerating LLM Inference with Staged Speculative Decoding (2308.04623v1)</a> </h4><div><p>\n",
+       "This paper proposes a novel algorithm, staged speculative decoding, to accelerate LLM inference in small-batch, on-device scenarios. It reduces single-batch decoding latency by 3.16x while perfectly preserving output quality, enabling faster and more efficient LLM inference for enterprise use cases such as natural language processing and machine translation.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04624v1>Benchmarking LLM powered Chatbots: Methods and Metrics (2308.04624v1)</a> </h4><div><p>\n",
-       "This paper proposes a novel benchmark, the E2E benchmark, to evaluate the accuracy and usefulness of chatbots powered by Large Language Models (LLMs). The proposed benchmark uses cosine similarity to measure the performance of the chatbot, and shows better results compared to other metrics. Enterprises and products can benefit from the proposed benchmark by using it to accurately assess the performance of their chatbots.</p>\n",
+       "This paper proposes a novel benchmark, the E2E benchmark, to accurately assess the performance of chatbots, especially those powered by Large Language Models (LLMs). The proposed benchmark uses cosine similarity to evaluate accuracy and usefulness of the answers provided by chatbots, and shows better results compared to other available metrics. Enterprises can use this benchmark to evaluate their chatbots and benefit from the improved accuracy and usefulness of the answers.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04945v1>LLMeBench: A Flexible Framework for Accelerating LLMs Benchmarking (2308.04945v1)</a> </h4><div><p>\n",
-       "LLMeBench is a flexible framework for accelerating the benchmarking of Large Language Models (LLMs). It can be easily customized for any NLP task and language, and features zero- and few-shot learning settings. Enterprises and products can use the framework to quickly evaluate the performance of LLMs on their own datasets, and benefit from its fast customization capabilities.</p>\n",
+       "LLMeBench is a flexible framework for accelerating the benchmarking of Large Language Models (LLMs) for NLP tasks across different languages. It features zero- and few-shot learning settings, and can be customized for any task and model in less than 10 minutes. It has been tested on 31 tasks and 53 datasets, and is open-sourced for the community.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04679v1>Sci-CoT: Leveraging Large Language Models for Enhanced Knowledge Distillation in Small Models for Scientific QA (2308.04679v1)</a> </h4><div><p>\n",
-       "Sci-CoT is a two-stage framework that enables the transfer of reasoning capabilities from large language models to smaller models. It separates the processes of generating rationales and inferring answers, leading to improved performance on scientific question-answering tasks. Enterprises and products can benefit from Sci-CoT's improved performance in situations where computational resources are constrained.</p>\n",
+       "Sci-CoT is a two-stage framework that enables the transfer of reasoning capabilities from large language models to smaller models for scientific question-answering tasks. It separates the processes of generating rationales and inferring answers, leading to improved performance with fewer computational resources. This could be used in enterprise settings to improve the accuracy of QA systems while reducing the computational costs.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04813v1>CLEVA: Chinese Language Models EVAluation Platform (2308.04813v1)</a> </h4><div><p>\n",
-       "CLEVA is a user-friendly platform for evaluating Chinese LLMs, providing a standardized workflow to assess performance across various dimensions. It curates new data to reduce contamination and has an easy-to-use interface, allowing enterprises and products to quickly and accurately evaluate Chinese LLMs with minimal coding.</p>\n",
+       "CLEVA is a Chinese Language Models EVAluation Platform that provides a standardized workflow to holistically evaluate Chinese LLMs. It curates new data to reduce contamination and provides an easy-to-use interface to minimize coding. Enterprises can use CLEVA to thoroughly evaluate Chinese LLMs and benefit from its competitive leaderboard and sampling strategy.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04811v1>A Bipartite Graph is All We Need for Enhancing Emotional Reasoning with Commonsense Knowledge (2308.04811v1)</a> </h4><div><p>\n",
-       "This paper proposes a Bipartite Heterogeneous Graph (BHG) method for enhancing AI systems' emotional reasoning with commonsense knowledge. The BHG method can be generalized to multiple knowledge sources and is more efficient than existing methods. It can be used to improve online opinion mining from social media and empathetic dialogue systems, providing potential benefits for enterprises and products.</p>\n",
+       "This paper proposes a Bipartite Heterogeneous Graph (BHG) method for enhancing AI systems' emotional reasoning with commonsense knowledge. The BHG method can be generalized to multi-type and multi-grained knowledge sources, and the proposed Multi-dimensional Heterogeneous Graph Transformer (MHGT) can retain unchanged feature spaces and unequal dimensions for heterogeneous node types. This method can be used in applications such as online opinion mining from social media and empathetic dialogue systems, and experiments show that it significantly outperforms existing methods.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04709v1>A Comparative Study of Open-Source Large Language Models, GPT-4 and Claude 2: Multiple-Choice Test Taking in Nephrology (2308.04709v1)</a> </h4><div><p>\n",
-       "This study compared the performance of open-source large language models (LLMs) to GPT-4 and Claude 2 on multiple-choice questions in the field of Nephrology. The results showed that open-source LLMs performed poorly, with an overall success rate of 17.1-25.5%, while GPT-4 and Claude 2 achieved 73.3% and 54.4% respectively. These findings suggest that LLMs have potential for use in adaptive physician training, medical co-pilot applications, and digital patient interaction scenarios.</p>\n",
+       "This study compared the performance of open-source large language models (LLMs) to GPT-4 and Claude 2 on multiple-choice questions in Nephrology. The results showed that open-source LLMs performed poorly, with an overall success rate of 17.1-25.5%. In contrast, Claude 2 and GPT-4 achieved 54.4% and 73.3% accuracy respectively. These findings suggest that LLMs have potential applications in medical training and patient care, and could be used to improve accuracy and efficiency in these areas.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04913v1>LLaMA-E: Empowering E-commerce Authoring with Multi-Aspect Instruction Following (2308.04913v1)</a> </h4><div><p>\n",
-       "This paper proposes LLaMA-E, a unified and customized instruction-following language model for e-commerce authoring tasks. It enables domain experts to create seed instructions for tasks such as ads generation, query-enhanced product title rewriting, product classification, purchase intent speculation, and general Q&A. The GPT-3.5 is used as a teacher model to expand the seed instructions and form a training set for the LLaMA-E models. The results show that the proposed models achieve state-of-the-art results in quantitative and qualitative evaluations, with the advantage of zero-shot scenes. This study is the first to serve LLMs to specific e-commerce authoring scenarios, providing potential immediate enterprise and product uses with the claimed benefits of the original innovations.</p>\n",
+       "This paper proposes LLaMA-E, a unified and customized instruction-following language model for e-commerce authoring tasks. It enables domain experts to create seed instructions for tasks such as ads generation, query-enhanced product title rewriting, product classification, purchase intent speculation, and general Q&A. The proposed model achieves state-of-the-art results in quantitative and qualitative evaluations, and offers potential immediate enterprise use cases with the claimed benefits of improved customer service, enhanced product titles, and better product classification.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04592v1>Shepherd: A Critic for Language Model Generation (2308.04592v1)</a> </h4><div><p>\n",
-       "Shepherd is a language model designed to critique and refine language model outputs, leveraging large language models to identify diverse errors and provide suggestions to remedy them. It is small (7B parameters) yet outperforms established models in both automated and human evaluations, with an average win-rate of 53-87%. This could be used in enterprise applications to improve customer service and product quality.</p>\n",
+       "Shepherd is a language model specifically designed to critique and refine language model outputs. It leverages a high quality feedback dataset and is small (7B parameters). It has been evaluated against established models and outperforms them, with an average win-rate of 53-87%. It has potential immediate enterprise use cases, such as providing feedback on customer service responses and suggesting refinements.</p>\n",
        "<div><h4><a href=http://arxiv.org/abs/2308.04838v1>No Need to Lift a Finger Anymore? Assessing the Quality of Code Generation by ChatGPT (2308.04838v1)</a> </h4><div><p>\n",
-       "This paper assesses the quality of code generation using ChatGPT, a large language model. Results show potential issues and limitations in the ChatGPT-based code generation, providing valuable insights for improving AI and LLM-based code generation techniques. Enterprises and products can benefit from this research by using the improved code generation techniques to increase developer productivity and reduce security risks.</p>"
+       "This paper evaluates the use of ChatGPT, a large language model, for code generation. Results show that ChatGPT can generate code that is correct, understandable, and secure. Additionally, it can engage in multi-round processes to facilitate code generation. This research provides valuable insights into the performance of ChatGPT for code generation, and can be used to improve AI-based code generation techniques for enterprise use cases.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,14 +621,6 @@
    "source": [
     "HTML(doc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "786fce4e-d92d-40f4-a659-5d9034817258",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
