fixed some issues with OpenAIChat

--- a/notebooks/arxiv_retrieve.ipynb
+++ b/notebooks/arxiv_retrieve.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "a7a9fbd4-cfae-43a7-9798-c13aa16f35e7",
    "metadata": {},
    "outputs": [
@@ -54,13 +54,33 @@
     "openai\n",
     "sentence-transformers\n",
     "transformers\n",
-    "sklearn\n",
+    "scikit-learn\n",
     "numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
+   "id": "cd24905e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d4d0eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install langchain_community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "cc86a416-b611-4b3c-9d48-b65a57dfcccc",
    "metadata": {},
    "outputs": [],
@@ -85,7 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
+   "id": "7c1c7614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['OPENAI_API_KEY'] = openai_api_key.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "e08137eb-885c-48f0-a966-2e81f57e0cf7",
    "metadata": {},
    "outputs": [],
@@ -263,11 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "2569299f-5984-435d-b0fe-d726f1da9a76",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class TopicModeler(ABC):\n",
     "    def __init__(self):\n",
     "        pass\n",
@@ -431,32 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "edcd50d9-bc2c-46b9-a1d3-5fa927317791",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<h4>test</h4>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import HTML\n",
-    "HTML('<h4>test</h4>')"
+    "from IPython.display import HTML\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "3d4c8b2d-ac5b-499e-bcfe-ebbfba4b2dc9",
    "metadata": {
     "scrolled": true
@@ -502,7 +519,7 @@
     "        self.prompt_intro = PromptTemplate.from_template(prompt_template_intro)\n",
     "        self.prompt_summarization = PromptTemplate.from_template(prompt_template_summ)\n",
     "        \n",
-    "        self.llm = OpenAI(temperature=0.1,openai_api_key = openai_api_key)\n",
+    "        self.llm = OpenAI(temperature=0.1)\n",
     "        \n",
     "        self.llm_chain_summarizer = LLMChain(\n",
     "            llm=self.llm,\n",
@@ -544,6 +561,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c56be11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "96708b16-c8eb-40e0-8ce4-633c3846c5bc",
    "metadata": {},
@@ -554,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "id": "f59d12a6-2be7-40d4-b093-0275759e6cdf",
    "metadata": {},
    "outputs": [
@@ -562,7 +587,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 10/10 [00:36<00:00,  3.67s/it]\n"
+      "/tmp/ipykernel_6066/3845215456.py:69: DeprecationWarning: The 'Search.results' method is deprecated, use 'Client.results' instead\n",
+      "  for r in arxiv_res.results():\n",
+      "100%|██████████| 10/10 [00:12<00:00,  1.22s/it]\n"
      ]
     }
    ],
@@ -639,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
